Update UFC Machine Learning Project.ipynb

--- a/UFC Machine Learning Project.ipynb
+++ b/UFC Machine Learning Project.ipynb
@@ -2023,7 +2023,7 @@
    "id": "43584b46",
    "metadata": {},
    "source": [
-    "# Saving the final df that will be used to "
+    "# Saving the final df that will be used to train and test our ML model."
    ]
   },
   {
